# src/modules/products/products.controller.ts
@@ -28,6 +28,7 @@ import {
 import { ZodValidationPipe } from '../../common/pipes/zod-validation.pipe';
 import { JwtAuthGuard } from '../../common/guards/jwt-auth.guard';
 import { RolesGuard } from '../../common/guards/roles.guard';
+import { StoreOwnershipGuard } from '../../common/guards/store-ownership.guard';
 import { Roles } from '../../common/decorators/roles.decorator';
 import { CurrentUser } from '../../common/decorators/current-user.decorator';
 import { JwtPayload } from '../../common/guards/jwt-auth.guard';
@@ -35,7 +36,7 @@ import { JwtPayload } from '../../common/guards/jwt-auth.guard';
 @ApiTags('Products')
 @ApiBearerAuth()
 @Controller('stores/:storeId/products')
-@UseGuards(JwtAuthGuard, RolesGuard)
+@UseGuards(JwtAuthGuard, RolesGuard, StoreOwnershipGuard)
 @Roles('merchant')
 export class ProductsController {
   constructor(private readonly productsService: ProductsService) {}
@@ -157,7 +158,7 @@ export class ProductsController {
 @ApiTags('Categories')
 @ApiBearerAuth()
 @Controller('stores/:storeId/categories')
-@UseGuards(JwtAuthGuard, RolesGuard)
+@UseGuards(JwtAuthGuard, RolesGuard, StoreOwnershipGuard)
 @Roles('merchant')
 export class CategoriesController {
   constructor(private readonly categoriesService: CategoriesService) {}
